--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>maven</artifactId>
     <name>maven</name>
     <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <release-plugin-version>2.0-beta-9</release-plugin-version>
