--- a/maven/maven-dsldoc-plugin/pom.xml
+++ b/maven/maven-dsldoc-plugin/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.openehealth.ipf.labs.maven</groupId>
         <artifactId>maven</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
 
     <dependencies>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-settings</artifactId>
-            <version>2.0.9</version>
+            <version>2.2.1</version>
         </dependency>
 
         <dependency>
@@ -46,6 +46,13 @@
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
         </dependency>
+        
+        <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>1.8.0</version>
+        </dependency>
+            
     </dependencies>
 
     <build>
