[maven-release-plugin] prepare release maven-1.3

--- a/maven/maven-dsldoc-plugin/pom.xml
+++ b/maven/maven-dsldoc-plugin/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.openehealth.ipf.labs.maven</groupId>
         <artifactId>maven</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
     </parent>
 
     <dependencies>
