--- a/maven/maven-confluence-export-plugin/pom.xml
+++ b/maven/maven-confluence-export-plugin/pom.xml
@@ -24,7 +24,9 @@
         <activation-version>1.1</activation-version>
         <commons-discovery-version>0.5</commons-discovery-version>
         <commons-io-version>1.4</commons-io-version>
+        <commons-lang-version>2.4</commons-lang-version>
         <commons-logging-version>1.1</commons-logging-version>
+        <commons-httpclient-version>4.1.2</commons-httpclient-version>
         <cxf-version>2.4.2</cxf-version>
         <junit-version>4.8.1</junit-version>
         <mail-version>1.4</mail-version>
@@ -57,6 +59,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -93,6 +100,16 @@
           <artifactId>axis-jaxrpc</artifactId>
           <version>${axis-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${commons-httpclient-version}</version>
+            </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>${commons-httpclient-version}</version>
+    </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
