--- a/maven/maven-confluence-export-plugin/pom.xml
+++ b/maven/maven-confluence-export-plugin/pom.xml
@@ -127,16 +127,18 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <!--plugin>
+            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>axistools-maven-plugin</artifactId>
                <version>${axistools-version}</version>
                 <configuration>
                     <urls>
-                        <url>file:${basedir}/src/main/resources/wsdl/confluenceservice-v2.wsdl</url>
+                        <url>file:${basedir}/src/main/resources/wsdl/confluenceservice-v1.wsdl</url>
+                        <!--url>file:${basedir}/src/main/resources/wsdl/confluenceservice-v2.wsdl</url-->
+                        <!--url>file:${basedir}/src/main/resources/wsdl/pdfexport.wsdl</url-->
                     </urls>
                     <outputDirectory>${basedir}/src/main/generated</outputDirectory>
-                    <packageSpace>org.openehealth.ipf.labs.maven.confluence.export.stubs</packageSpace>
+                    <packageSpace>org.openehealth.ipf.labs.maven.confluence.export.html.v1</packageSpace>
                     <testCases>true</testCases>
                     <serverSide>true</serverSide>
                     <subPackageByFileName>false</subPackageByFileName>
@@ -160,7 +162,7 @@
                         <version>${mail-version}</version>
                     </dependency>
                 </dependencies>
-            </plugin-->
+            </plugin>
         </plugins>
     </build>
 </project>
