--- a/maven/maven-confluence-export-plugin/pom.xml
+++ b/maven/maven-confluence-export-plugin/pom.xml
@@ -13,9 +13,7 @@
     </parent>
 
     <properties>
-        <maven-plugin-api-version>2.0</maven-plugin-api-version>
-        <maven-reporting-api-version>2.0.8</maven-reporting-api-version>
-        <maven-reporting-impl-version>2.0</maven-reporting-impl-version>
+        <maven-plugin-api-version>2.2.1</maven-plugin-api-version>
         <maven-settings-version>2.2.1</maven-settings-version>
 
         <axistools-version>1.4</axistools-version>
@@ -39,22 +37,17 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven-plugin-api-version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-api</artifactId>
-            <version>${maven-reporting-api-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-impl</artifactId>
-            <version>${maven-reporting-impl-version}</version>
+          <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-artifact</artifactId>
+            <version>${maven-plugin-api-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-settings</artifactId>
             <version>${maven-settings-version}</version>
         </dependency>
-
+       
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
