[maven-release-plugin] prepare for next development iteration

--- a/maven/maven-confluence-export-plugin/pom.xml
+++ b/maven/maven-confluence-export-plugin/pom.xml
@@ -4,12 +4,12 @@
     <artifactId>maven-confluence-export-plugin</artifactId>
     <name>maven-confluence-export-plugin</name>
     <packaging>maven-plugin</packaging>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	
     <parent>
         <groupId>org.openehealth.ipf.labs.maven</groupId>
         <artifactId>maven</artifactId>
-        <version>1.4</version>
+        <version>1.5-SNAPSHOT</version>
     </parent>
 
     <properties>
